still trying to fix the alignment issues of the header

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: serif 'Times New Roman', Times, serif;
+    border: thin black solid;
 }
 
 body {
@@ -11,12 +12,13 @@ body {
 }
 
 header {
+    background-color: #353cb8;
+    color: white;
+
     display: flex;
     flex-direction: row;
     flex: 0 0 80px;
-    background-color: #353cb8;
-    color: white;
-    justify-items: center;
+    align-content: center;
 }
 
 main {
@@ -34,16 +36,36 @@ footer {
     color: white;
 }
 
+.title {
+    font-size: 40px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 200px;
+}
+
+.header-text {
+    display: block;
+    text-align: center;
+    display: flex;
+    flex: 1;
+    text-align: center;
+    align-content: center;
+}
+
 nav {
     display: flex;
     flex-direction: row;
     flex: 1;
+    align-items: center;
+    height: fill-available;
 }
 
 nav > p {
-    flex: 1;
+    flex: 1 0 40px;
     text-align: center;
-    align-content: center;
+    align-items: flex-end;
+    /* align-items: center; */
 }
 
 .form-input {
